Updated: Dates, track name (Westshore Motorsports from Western Speedway) info. Hidden: marquee, slideshow. General Clean up
Signed-off-by: KoleBarnes <kbarnes261@gmail.com>

--- a/src/inc/navBar.html
+++ b/src/inc/navBar.html
@@ -30,12 +30,13 @@
           </ul> -->
         </li>
         <li id="pointsActiveNavBar"><a href="/Points.html">Points</a></li>
-        <li id="eventsActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Events <span class="caret"></span></a>
+        <li id="eventsActiveNavBar"><a href="/Events.html">Events</a></li>
+        <!-- <li id="eventsActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Events <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/Events.html">Race Schedule</a></li>
             <li><a href="/Events.html#Posters">Posters</a></li>
           </ul>
-        </li>
+        </li> -->
         <li id="sponsorsActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Sponsors <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/Sponsors.html">B&D Forklift</a></li>
