Added rain date. Remove western speedway from other tracks in ContactUs.html
Signed-off-by: KoleBarnes <kbarnes261@gmail.com>

--- a/src/ContactUs.html
+++ b/src/ContactUs.html
@@ -414,7 +414,7 @@
         <div class="aside themeColor">
           <h2 id="links">Other Tracks and Clubs</h2>
           <ul>
-            <li><a href="http://www.westernspeedway.net/" target="_blank">Western Speedway</a></li>
+            <!-- <li><a href="http://www.westernspeedway.net/" target="_blank">Western Speedway</a></li> -->
             <li><a href="https://westshoremotorsportspark.com/" target="_blank">Westshore Motorsports</a></li>
             <li><a href="http://www.northislandtimingassociation.com/" target="_blank">North Island Timing Association</a></li>
             <li><a href="https://vimsa.ca/" target="_blank">Vancouver Island Motorsports Association</a></li>
