--- a/src/index.html
+++ b/src/index.html
@@ -109,12 +109,13 @@
             <div class="animated fadeInLeft indexSchedule">
               <!-- <p>To Be Determined</p> &nbsp;&nbsp;-->
               <p style="margin-left: 27px;"  id="1stRace">June 6 - All Classes</p>
-              <p style="margin-left: 51px;" id="2ndRace"> 27 - All Classes</p>
-              <p style="margin-left: 23px;"  id="3rdRace">&nbsp;&nbsp;July 4 - All Classes</p>
-              <p style="margin-left: 51px;" id="4thRace"> 25 - All Classes</p>
-              <p style="margin-left: 23px;" id="5thRace">&nbsp;&nbsp;Aug 8 - All Classes</p>
-              <p style="margin-left: 51px;" id="6thRace"> 29 - All Classes</p>
-              <p style="margin-left: 20px;"  id="7thRace">Sept 12 - All Classes</p>
+              <p style="margin-left: 51px;" id="2ndRace" class="new"> 20 - All Classes</p>
+              <p style="margin-left: 51px;" id="3rdRace"> 27 - All Classes</p>
+              <p style="margin-left: 23px;"  id="4thRace">&nbsp;&nbsp;July 4 - All Classes</p>
+              <p style="margin-left: 51px;" id="5thRace"> 25 - All Classes</p>
+              <p style="margin-left: 23px;" id="6thRace">&nbsp;&nbsp;Aug 8 - All Classes</p>
+              <p style="margin-left: 51px;" id="7thRace"> 29 - All Classes</p>
+              <p style="margin-left: 20px;"  id="8thRace">Sept 12 - All Classes</p>
               <!-- <p style="margin-left: 31px;" id="8thRace">26 - SHOOTOUT</p>
               <p style="margin-left: 1px;"  id="9thRace">Aug &nbsp;16 - Points - All Classes</p>
               <p style="margin-left: 31px;" id="10thRace">23 - Points - All Classes</p>
