Updated content and contact info.
Signed-off-by: KoleBarnes <kbarnes261@gmail.com>

--- a/src/ContactUs.html
+++ b/src/ContactUs.html
@@ -124,7 +124,7 @@
               <td>Tracy Barnes</td>
               <td>#208</td>
               <td>250-812-6201</td>
-              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+              <td><a href="mailto:barnes@island-oasis.ca">barnes@island-oasis.ca</a></td>
             </tr>
 <!--             <tr>
               <td>&nbsp;</td>
@@ -152,14 +152,14 @@
               <td>Kole Barnes</td>
               <td>#18</td>
               <td>250-812-6201</td>
-              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+              <td><a href="mailto:barnes@island-oasis.ca">barnes@island-oasis.ca</a></td>
             </tr>
             <tr>
               <td>&nbsp;</td>
               <td>Connor Barnes</td>
               <td>#8</td>
               <td>250-812-6201</td>
-              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+              <td><a href="mailto:barnes@island-oasis.ca">barnes@island-oasis.ca</a></td>
             </tr>
             <tr>
               <td>Membership Director</td>
@@ -208,14 +208,14 @@
               <td>Kole Barnes</td>
               <td>#18</td>
               <td>250-812-6201</td>
-              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+              <td><a href="mailto:barnes@island-oasis.ca">barnes@island-oasis.ca</a></td>
             </tr>
             <tr>
               <td>High School Class Liason</td>
               <td>Tracy Barnes</td>
               <td>#208</td>
               <td>250-812-6201</td>
-              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+              <td><a href="mailto:barnes@island-oasis.ca">barnes@island-oasis.ca</a></td>
             </tr>
             <tr>
               <th>Race Day Volunteers:</th>
@@ -250,7 +250,7 @@
               <td>Tracy Barnes</td>
               <td>#208</td>
               <td>250-812-6201</td>
-              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+              <td><a href="mailto:barnes@island-oasis.ca">barnes@island-oasis.ca</a></td>
             </tr>
             <tr>
               <td>Tower Computers</td>
@@ -264,14 +264,14 @@
               <td>Kole Barnes</td>
               <td>#18</td>
               <td>250-812-6201</td>
-              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+              <td><a href="mailto:barnes@island-oasis.ca">barnes@island-oasis.ca</a></td>
             </tr>
             <tr>
               <td>&nbsp;</td>
               <td>Connor Barnes</td>
               <td>#8</td>
               <td>250-812-6201</td>
-              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+              <td><a href="mailto:barnes@island-oasis.ca">barnes@island-oasis.ca</a></td>
             </tr>
             <tr>
               <td>Starter</td>
@@ -306,14 +306,14 @@
               <td>Wade Barnes</td>
               <td>(#208)</td>
               <td>250-812-6701</td>
-              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+              <td><a href="mailto:barnes@island-oasis.ca">barnes@island-oasis.ca</a></td>
             </tr>
             <tr>
               <td>&nbsp;</td>
               <td>Kole Barnes</td>
               <td>#18</td>
               <td>250-812-6201</td>
-              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+              <td><a href="mailto:barnes@island-oasis.ca">barnes@island-oasis.ca</a></td>
             </tr>
             <tr>
               <td>Burnout Box</td>
@@ -348,7 +348,7 @@
               <td>Tracy Barnes</td>
               <td>#208</td>
               <td>250-598-4048</td>
-              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+              <td><a href="mailto:barnes@island-oasis.ca">barnes@island-oasis.ca</a></td>
             </tr>
             <tr>
               <td>Race Day Ladder & Trophies</td>
@@ -383,7 +383,7 @@
               <td>Tracy Barnes</td>
               <td>#208</td>
               <td>250-598-4048</td>
-              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+              <td><a href="mailto:barnes@island-oasis.ca">barnes@island-oasis.ca</a></td>
             </tr>    
             <tr>
               <td>Front Gate</td>
