--- a/src/index.html
+++ b/src/index.html
@@ -200,10 +200,10 @@
             Streetcar Shootout and Rain Dates are included.
           </p> -->
 
-        <div id="content2">
+        <!-- <div id="content2">
           <h1>2020 Race Schedule</h1>
           <p>The 2020 Race Schedule is here! check out the <a href="/Events.html">Events page</a> for details.</p>
-        </div>
+        </div> -->
         
         <!-- <div id="SilentAuctionEnd">
           <h1>SILENT AUCTION</h1>
@@ -213,11 +213,11 @@
           <p>Thank you for helping support the sport we all love.</p>
         </div> -->
 
-        <h1>We Are Back Kinda...</h1>
-        <p>The 2021 Schedule is out. For more infomation visit our <a href="https://www.facebook.com/groups/327092727329942/" target="_blank"> Facebook</a> page or <a href="/ContactUs.html">Contact Us</a></p>
-
-        <h1>CHASIS CERTIFICATION</h1>
-        <p>Saturday June 19th at Westshore Motorsports.</p>
+        <h1>Attention in the pits!</h1>
+        <p>There is space available for racers to join us at the races. The grand stands are now open for spectators as well. Contact Bill Jamieson 250-382-8792.</p>
+        
+        <!-- <h1>CHASIS CERTIFICATION</h1>
+        <p>Saturday June 19th at Westshore Motorsports.</p> -->
 
         <h1>We're Social</h1>
         <p>Drag Race Victoria is on <a href="https://www.facebook.com/groups/327092727329942/" target="_blank"> Facebook</a>, <a href="https://twitter.com/DragRaceVic">Twitter</a> and <a href="https://www.instagram.com/dragracevictoria/?hl=en">Instagram</a>!</p>  
