Commented out fees.
Signed-off-by: KoleBarnes <kbarnes261@gmail.com>

--- a/src/RacerInfo.html
+++ b/src/RacerInfo.html
@@ -108,7 +108,7 @@
           <p>Alternative text - include a link <a href="/SISLRA/RacersInfo/NewRacersInformation.pdf">to the PDF!</a></p>
         </object> -->
 
-      <h1 id="Fees">FEES</h1>
+      <!-- <h1 id="Fees">FEES</h1>
         <div id="feesDiv">
           <p>Members Entry Fees Per Race</p>
           <br>
@@ -149,7 +149,7 @@
         <a class="DriverInfoPDF" href="/SISLRA/RacersInfo/DriverInformationForm.pdf" target="_blank" class="btn btn-link" role="button"><i class="fa fa-file-pdf-o fa-3x" aria-hidden="true"></i><br> Driver Information Form/New Racers Form</a>
 
         <br>
-        <br>
+        <br> -->
         
         <h1 id="RaceClassesAndTimes">RACE CLASSES AND TIMES</h1>
         <div class="alignLeft">
