--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
               <!-- Classes .current .over .cancelled .new -->
             </div>
           
-          <h3><a href="/RacerInfo.html#Fees"><span class="glyphicons glyphicons-money"></span>Fees</a></h3>
+          <!-- <h3><a href="/RacerInfo.html#Fees"><span class="glyphicons glyphicons-money"></span>Fees</a></h3> -->
           <h3><a href="/AboutUs.html#LOCATEDAT"><span class="glyphicons glyphicons-map-marker"></span>Location</a></h3>
           <h3><a href="/Sponsors.html"><span class="glyphicons glyphicons-group"></span>Sponsors</a></h3>
           <h3 style="margin-left:3px;"><a href="/Sponsors.html#SponsorshipInformation">Interested in being a sponsor?</a></h3>
