Updated race dates. Change home icon in navbar to text. Fixed margin that should have been padding.
Signed-off-by: KoleBarnes <kbarnes261@gmail.com>

--- a/src/inc/navBar.html
+++ b/src/inc/navBar.html
@@ -10,7 +10,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li id="indexActiveNavBar"><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
+        <li id="indexActiveNavBar"><a href="/">Home</a></li> <!--<span class="glyphicon glyphicon-home"></span> -->
         <li id="racerInfoActiveNavBar"><a href="/RacerInfo.html">Racer Info</a>
           <!-- 
             <li id="racerInfoActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Racer Info <span class="caret"></span></a>
