--- a/src/index.html
+++ b/src/index.html
@@ -108,17 +108,16 @@
           
             <div class="animated fadeInLeft indexSchedule">
               <!-- <p>To Be Determined</p> &nbsp;&nbsp;-->
-              <p style="margin-left: 27px;"  id="1stRace">June 6 - All Classes</p>
-              <p style="margin-left: 51px;" id="2ndRace" class="new"> 20 - All Classes</p>
-              <p style="margin-left: 51px;" id="3rdRace"> 27 - All Classes</p>
-              <p style="margin-left: 23px;"  id="4thRace">&nbsp;&nbsp;July 4 - All Classes</p>
-              <p style="margin-left: 51px;" id="5thRace"> 25 - All Classes</p>
-              <p style="margin-left: 23px;" id="6thRace">&nbsp;&nbsp;Aug 8 - All Classes</p>
-              <p style="margin-left: 51px;" id="7thRace"> 29 - All Classes</p>
-              <p style="margin-left: 20px;"  id="8thRace">Sept 12 - All Classes</p>
-              <!-- <p style="margin-left: 31px;" id="8thRace">26 - SHOOTOUT</p>
-              <p style="margin-left: 1px;"  id="9thRace">Aug &nbsp;16 - Points - All Classes</p>
-              <p style="margin-left: 31px;" id="10thRace">23 - Points - All Classes</p>
+              <p style="margin-left: 27px;"  id="1stRace">Apr 17 - Track Burnoff</p>
+              <p style="margin-left: 51px;" id="2ndRace">24 - All Classes</p>
+              <p style="margin-left: 22px;" id="3rdRace">May 15 - All Classes</p>
+              <p style="margin-left: 23px;"  id="4thRace">June &nbsp;5 - All Classes</p>
+              <p style="margin-left: 51px;" id="5thRace">26 - All Classes</p>
+              <p style="margin-left: 24px;" id="6thRace">July 24 - Shootout</p>
+              <p style="margin-left: 23px;" id="7thRace">Aug &nbsp;&nbsp;7 - All Classes</p>
+              <p style="margin-left: 51px;"  id="8thRace">28 - All Classes</p>
+              <p style="margin-left: 21px;"  id="9thRace">Sept 11 - All Classes</p>
+              <!-- <p style="margin-left: 31px;" id="10thRace">23 - Points - All Classes</p>
               <p style="margin-left: -3px;" id="11thRace">Sept &nbsp;13 - Points - Championship Race</p> -->
               <!-- <p class="new" style="margin-left: 30px;" id="12thRace">30 - Championship Race</p> -->
               <!-- Classes .current .over .cancelled .new -->
