Updated dates, Sponsors, and info.
Signed-off-by: KoleBarnes <kbarnes261@gmail.com>

--- a/src/RacerInfo.html
+++ b/src/RacerInfo.html
@@ -108,12 +108,14 @@
           <p>Alternative text - include a link <a href="/SISLRA/RacersInfo/NewRacersInformation.pdf">to the PDF!</a></p>
         </object> -->
 
-      <!-- <h1 id="Fees">FEES</h1>
+      <h1 id="Fees">FEES</h1>
         <div id="feesDiv">
+          <p>* All prices below have the option to paid for the full year all at once. </p>
+          <br>
           <p>Members Entry Fees Per Race</p>
           <br>
           <p><strong>Street Class</strong> - $35.00 for vehicle and member*</p>
-          <p><strong>Bike Class</strong> - $30.00 for bike and member*</p>
+          <p><strong>Bike Class</strong> - $35.00 for bike and member*</p>
           <p><strong>Pro Class</strong> - $45.00 for vehicle and member*</p>
           <p><strong>Pit Passes</strong> - $10.00 per member*</p>
           <br>
@@ -125,7 +127,7 @@
           <p><strong>Student Pit Pass</strong> - $10.00 per student.
           <p><strong>First Time Racers</strong> - $20.00 for vehicle and driver for first race day, then above pricing.</p>
           <br>
-          <p><strong>Grandstands $5.00 per person. 13 and under are free with an adult!</strong></p>
+          <p><strong>Grandstands $5.00 per person. 12 and under are free with an adult!</strong></p>
           <br>
           <p>Individual <a href="/RacerInfo#Memberships">memberships</a> fees are $30.00</p>
           <p>Family <a href="/RacerInfo#Memberships">membership</a> fees are $60.00 (includes two adults and two children under 16) and run from April 1st to March 31st annually.</p>
@@ -138,7 +140,7 @@
 
         <p>Help support our club and ensure we are racing for many years to come.</p>
 
-        <p>Individual Memberships are $30.00 and family Memberships are $60.00 (Family Memberships includes two adults and two children under 16)
+        <p>Individual Memberships are $50.00 and family Memberships are $70.00 (Family Memberships includes two adults and two children under 16)
           and run from April 1st to May 31st annually.</p>
         <p>Memberships can be purchased at meetings, on race day, or by contacting the Membership Director -
           Bill Jamieson at 250-888-0053 or though email at <a href="mailto:mrpontiac55@gmail.com">mrpontiac55@gmail.com</a></p>
@@ -149,7 +151,7 @@
         <a class="DriverInfoPDF" href="/SISLRA/RacersInfo/DriverInformationForm.pdf" target="_blank" class="btn btn-link" role="button"><i class="fa fa-file-pdf-o fa-3x" aria-hidden="true"></i><br> Driver Information Form/New Racers Form</a>
 
         <br>
-        <br> -->
+        <br>
         
         <h1 id="RaceClassesAndTimes">RACE CLASSES AND TIMES</h1>
         <div class="alignLeft">
@@ -184,7 +186,7 @@
           <p><strong><u>TECHNICAL INSPECTION</u></strong></p>
           <p><strong>Technical/Safety inspection: You must have;</strong></p>
           <ul>
-            <li>Snell 05 Helmet. (Snell approved with a manufacture date of 2005 or newer.)</li>
+            <li>Snell Helmet. (Snell approved with a manufacture date of 2015 or newer.)</li>
             <li>Valid Drivers Licence.</li>
             <li>Medical I.D. Card.</li>
             <li>Good working brakes.</li>
