--- a/src/inc/navBar.html
+++ b/src/inc/navBar.html
@@ -11,11 +11,10 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li id="indexActiveNavBar"><a href="/">Home</a></li> <!--<span class="glyphicon glyphicon-home"></span> -->
-        <li id="racerInfoActiveNavBar"><a href="/RacerInfo.html">Racer Info</a>
-          <!-- 
-            <li id="racerInfoActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Racer Info <span class="caret"></span></a>
-            class="dropdown"
-            <ul class="dropdown-menu">
+        <!-- <li id="racerInfoActiveNavBar"><a href="/RacerInfo.html">Racer Info</a> -->
+        <li id="racerInfoActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Racer Info <span class="caret"></span></a>
+          <!-- class="dropdown" -->
+          <ul class="dropdown-menu">
             <li><a href="/RacerInfo.html">Fees</a></li>
             <li><a href="/RacerInfo.html#Memberships">Memberships</a></li>
             <li><a href="/RacerInfo.html#DriverInformationSheet">Driver Information Form</a></li>
@@ -27,7 +26,7 @@
             <li><a href="/RacerInfo.html#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
             <li><a href="/RacerInfo.html#Disqualifications">Disqualifications</a></li> 
             <li><a href="/RacerInfo.html#Tree">Tree</a></li>
-          </ul> -->
+          </ul>
         </li>
         <li id="pointsActiveNavBar"><a href="/Points.html">Points</a></li>
         <li id="eventsActiveNavBar"><a href="/Events.html">Events</a></li>
@@ -41,14 +40,14 @@
           <ul class="dropdown-menu">
             <li><a href="/Sponsors.html">B&D Forklift</a></li>
             <li><a href="/Sponsors.html">Searles</a></li>
-            <li><a href="/Sponsors.html#GraphicFX">GraphicFX</a></li>
-            <li><a href="/Sponsors.html#Dentex">Dentex</a></li>
+            <!-- <li><a href="/Sponsors.html#GraphicFX">GraphicFX</a></li>
+            <li><a href="/Sponsors.html#Dentex">Dentex</a></li> -->
             <li><a href="/Sponsors.html#Lordco">Lordco</a></li>
-            <li><a href="/Sponsors.html#Used.ca">Used.ca</a></li>
-            <li><a href="/Sponsors.html#WestBayMechanical">West Bay Mechanical</a></li>
+            <!-- <li><a href="/Sponsors.html#Used.ca">Used.ca</a></li> -->
+            <!-- <li><a href="/Sponsors.html#WestBayMechanical">West Bay Mechanical</a></li> -->
             <li><a href="/Sponsors.html#IslandTorque">Island Torque</a></li>
-            <li><a href="/Sponsors.html#MaMillersPub">MaMillers Pub</a></li>
-            <li><a href="/Sponsors.html#HenrdrySwinton">Henrdry Swinton</a></li>
+            <!-- <li><a href="/Sponsors.html#MaMillersPub">MaMillers Pub</a></li>
+            <li><a href="/Sponsors.html#HenrdrySwinton">Henrdry Swinton</a></li> -->
             <li><a href="/Sponsors.html#SponsorshipInformation">Sponsorship Info.</a></li>
           </ul>
         </li>
