--- a/src/inc/footerSponsors.html
+++ b/src/inc/footerSponsors.html
@@ -8,20 +8,23 @@
         <h3>&nbsp;</h3>
         <a href="http://searlesauto.ca/" target="_blank"><img src="/SISLRA/YearSponsors/Searles.jpg" alt="Searles Auto" width="200" /></a>
       </div>
-      <div class="footer-section-2">
+      <!-- <div class="footer-section-2">
         <h3>&nbsp;</h3>
         <a href="http://www.382sign.com/" target="_blank"><img src="/SISLRA/YearSponsors/GraphicFX.png" alt="Graphic FX" width="200" /></a>
       </div>
       <div class="footer-section-2">
         <h3>&nbsp;</h3>
         <a href="http://www.dentexpdr.com/" target="_blank"><img src="/SISLRA/YearSponsors/DentexNoBack.png" alt="Dentex" width="210" height="80" /></a>
+      </div> -->
+      <div class="footer-section-2">
+        <a href="http://islandtorque.com/" target="_blank"><img id="IslandTorque" src="/SISLRA/YearSponsors/IslandTorqueConverter.png" alt="IslandTorque" width="180" /></a>
       </div>
       <div class="footer-section-2">
         <h3>&nbsp;</h3>
         <a href="http://www.lordco.com/" target="_blank"><img src="/SISLRA/YearSponsors/Lordco.png" alt="Lordco" width="200" /></a>
       </div>
     </div>
-    <div class="footer-row">
+    <!-- <div class="footer-row">
       <div class="footer-section-2">
         <a href="http://www.used.ca/" target="_blank"><img src="/SISLRA/YearSponsors/Used_Logo_Purple.png" alt="Used_Logo_Purple" width="190" /></a>
       </div>
@@ -36,6 +39,6 @@
       </div>
       <div class="footer-section-2">
         <a href="https://www.hsminsurance.com/" target="_blank"><img src="/SISLRA/YearSponsors/HenrdrySwinton.jpg" alt="Henrdry Swinton" width="190" /></a>
-      </div>
+      </div> -->
    </div>
 </div>
