End of year updates.
Signed-off-by: KoleBarnes <kbarnes261@gmail.com>

--- a/src/ContactUs.html
+++ b/src/ContactUs.html
@@ -415,12 +415,12 @@
           <h2 id="links">Other Tracks and Clubs</h2>
           <ul>
             <!-- <li><a href="http://www.westernspeedway.net/" target="_blank">Western Speedway</a></li> -->
-            <li><a href="https://westshoremotorsportspark.com/" target="_blank">Westshore Motorsports</a></li>
+            <!-- <li><a href="https://westshoremotorsportspark.com/" target="_blank">Westshore Motorsports</a></li> -->
             <li><a href="http://www.northislandtimingassociation.com/" target="_blank">North Island Timing Association</a></li>
             <li><a href="https://vimsa.ca/" target="_blank">Vancouver Island Motorsports Association</a></li>
+            <li><a href="http://www.saratogaspeedway.bc.ca/" target="_blank">Saratoga Speedway</a></li>
             <li><a href="http://www.albernidragracing.com/" target="_blank">Alberni Valley Drag Racing</a></li>
             <li><a href="http://www.missionraceway.com/" target="_blank">Mission Raceway Park</a></li>
-            <li><a href="http://www.saratogaspeedway.bc.ca/" target="_blank">Saratoga Speedway</a></li>
           </ul>
         </div>
       </div>
