--- a/src/Points.html
+++ b/src/Points.html
@@ -80,7 +80,7 @@
         <!-- <img src="/SISLRA/Slides/Untitled-3.jpg" alt="Slide3"/>
         <img src="/SISLRA/Slides/Untitled-2.jpg" alt="Slide2"/> -->
       </div>
-      <script src="/JavaScript/headerSlideShow.js"></script>
+      <!-- <script src="/JavaScript/headerSlideShow.js"></script> -->
       
       <div class="animated fadeIn marquee">
         <div>
@@ -145,12 +145,12 @@
         <div class="pointsTable">
           <div class="mySlidesPoints" w3-include-html="/SISLRA/RacePoints/ProPoints.htm"></div>
           <div class="mySlidesPoints" w3-include-html="/SISLRA/RacePoints/StreetPoints.htm"></div>
-          <div class="mySlidesPoints" w3-include-html="/SISLRA/RacePoints/BikePoints.htm"></div>
+          <!-- <div class="mySlidesPoints" w3-include-html="/SISLRA/RacePoints/BikePoints.htm"></div> -->
         </div>
 		
         <button type="button" class="btn btn-danger pointsButtons proButton" onclick="currentDiv(1)">Pro</button>
         <button type="button" class="btn btn-success pointsButtons" onclick="currentDiv(2)">Street</button>
-        <button type="button" class="btn btn-primary pointsButtons" onclick="currentDiv(3)">Bike</button>
+        <!-- <button type="button" class="btn btn-primary pointsButtons" onclick="currentDiv(3)">Bike</button> -->
 
         <script src="/JavaScript/pointsSelector.js"></script>
         
