--- a/src/inc/navBar.html
+++ b/src/inc/navBar.html
@@ -60,7 +60,7 @@
         <li id="aboutUsActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">About Us <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/AboutUs.html">About Us</a></li>
-            <li><a href="/AboutUs.html#LOCATEDAT">Location</a></li>
+            <!-- <li><a href="/AboutUs.html#LOCATEDAT">Location</a></li> -->
           </ul>
         </li>
         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Calculators <span class="caret"></span></a>
